--- a/contact.html
+++ b/contact.html
@@ -49,6 +49,44 @@
     </div>
   </div>
 </nav>
+		
+		<div class="spacer-6"></div>
+		
+			  <h1 align="center">THE TEAM</h1>
+	  <div class="container"><div class="card-group">
+  <div class="card">
+    <img src="images/image-example.png" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">Fien Kommer&nbsp;</h5>
+      <p class="card-text">info&nbsp;</p>
+    </div>
+    <div class="card-footer">
+      <small class="text-muted">Last updated 3 mins ago</small>
+    </div>
+  </div>
+		  <div class="col-1"></div>
+  <div class="card">
+    <img src="images/image-example.png" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">Charlotte Mommer&nbsp;</h5>
+      <p class="card-text">info&nbsp;</p>
+    </div>
+    <div class="card-footer">
+      <small class="text-muted">Last updated 3 mins ago</small>
+    </div>
+  </div>
+		  <div class="col-1"></div>
+  <div class="card">
+    <img src="images/image-example.png" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">Sebatian van de Water&nbsp;</h5>
+      <p class="card-text">Knapste van de groep</p>
+    </div>
+    <div class="card-footer">
+      <small class="text-muted">Last updated 3 mins ago</small>
+    </div>
+  </div>
+</div></div>
 	
 </body>
 </html>
