Instagram and vision and mission

--- a/index.html
+++ b/index.html
@@ -56,7 +56,42 @@
     </div>
   </div>
 </nav>
+		
+		<div class="spacer-2"></div>	
+
+	<section class="instagram">
+		<div class="container">
+			<div class="row">
+				<div class="col d-flex justify-content-center">
+	<div class="card-1" style="width: 60rem;">
+  <div class="card-body text-center">
+    <h3 class="card-title">“Become part of the Hayy community” </h3>
+    <p style="font-size: 1.5vw" class="card-text">Every first Monday of the month enjoy our beers during the pub crawl through Breda. 
+As we are a Breda based company we want to show you how fun the city is at nighttime! 
+Follow our Instagram to know more about this event! </p>
+    <a href="https://www.instagram.com/hayythebrand/" class="card-link"><button type="button" class="btn-sm" style="font-size:1.4vw">Instagram</button></a>
+    
+	  </div>
+  </div>
+</div>
+				</div>
+			</div>
+	</section>
+	
+	 
 	  
+	  	<div class="spacer-3"></div>
+	  
+		<div class="container">
+	  <div class="row">
+		  <div class="col-7 pb-5"><h1>Vision</h1><p style="font-size: 1.4vw">In a world of social awkwardness (due to the pandemic, the shift to a digital world) we believe that the social barrier should be broken because only then, people can make real connections again. </p></div>
+		  </div>
+		  
+		  <div class="row pt-5">
+			  <div class="col-5"></div>
+			  <div class="col" align="right"><h1>Mission</h1><p style="font-size: 1.4vw">In a world of social awkwardness (due to the pandemic, the shift to a digital world) we believe that the social barrier should be broken because only then, people can make real connections again. </p></div>
+		  </div>
+	  </div>
 	  
 </body>
 </html>
