--- a/index.html
+++ b/index.html
@@ -93,5 +93,26 @@ Follow our Instagram to know more about this event! </p>
 		  </div>
 	  </div>
 	  
+		
+		<div class="card-2">
+		  <div class="container-fluid">
+  <div class="card-body">
+	  <div class="row">
+    <div class="col pb-2 text-center">
+      <a href="index.html">HOME</a>
+	  <a href="beers.html">BEERS</a>
+		<a href="drink.html">WHERE TO DRINK US</a>
+		<a href="contact.html">CONTACT</a>
+    </div>
+	  <hr>
+	  <div class="row">
+    <div class="col pt-4">© 2022 Hayy, Inc</div>
+	<div class="col pt-2 text-center"><img src="images/hayylogo.png" class="img-fluid" alt="logo footer" height="100" width="50"></div>
+	<div class="col pt-4" align="right">instagram icon</div>
+		  </div>
+  </div>
+</div>
+			  </div>
+	  </div>
 </body>
 </html>
