--- a/drink.html
+++ b/drink.html
@@ -50,5 +50,43 @@
     </div>
   </div>
 </nav>
+	
+	 <div class="spacer-7"></div>
+	  
+	  
+	<div class="row">
+		<div class="col-1"></div>
+		<div class="col">
+	<iframe src="https://www.google.com/maps/d/u/0/embed?mid=1Co3k7peIWioyP9FkzeWst7we7akIt8d-&ehbc=2E312F" width="700" height="600"></iframe>
+			</div>
+		
+		<div class="col p-5" id="locations">
+			
+			
+		</div>
+		<div class="col-1"></div>
+		<div class="row"></div>
+		</div>
+	
+	<div class="card-2">
+		  <div class="container-fluid">
+  <div class="card-body">
+	  <div class="row">
+    <div class="col pb-2 text-center">
+      <a href="index.html">HOME</a>
+	  <a href="beers.html">BEERS</a>
+		<a href="drink.html">WHERE TO DRINK US</a>
+		<a href="contact.html">CONTACT</a>
+    </div>
+	  <hr>
+	  <div class="row">
+    <div class="col pt-4">© 2022 Hayy, Inc</div>
+	<div class="col pt-2 text-center"><img src="images/hayylogo.png" class="img-fluid" alt="logo footer" height="100" width="50"></div>
+	<div class="col pt-4" align="right">instagram icon</div>
+		  </div>
+  </div>
+</div>
+			  </div>
+	  </div>
 </body>
 </html>
