--- a/index.html
+++ b/index.html
@@ -92,6 +92,8 @@ Follow our Instagram to know more about this event! </p>
 			  <div class="col" align="right"><h1>Mission</h1><p style="font-size: 1.4vw">In a world of social awkwardness (due to the pandemic, the shift to a digital world) we believe that the social barrier should be broken because only then, people can make real connections again. </p></div>
 		  </div>
 	  </div>
+		
+		<div class="spacer-3"></div>
 	  
 		
 		<div class="card-2">
