--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- Bootstrap Javascript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
 
-    <title>Marketing</title>
+    <title>HAYY</title>
   </head>
 
     <!-- Option 2: Separate Popper and Bootstrap JS -->
@@ -56,6 +56,27 @@
     </div>
   </div>
 </nav>
+		
+			  <div class="spacer-1"></div>
+	  
+	  <div class="container">
+<div class="card">
+  <div class="row g-0">
+    <div class="col-md-4">
+      
+    <div class="col-md-8">
+      <div class="card-body pt-5">
+        <h1 class="card-title" style="font-size:4vw">Hayy You !</h1>
+        <p class="card-text" style="font-size:2vw">Glad to see you here, are you ready to socialize with hayy beer? 
+We are a Breda based brewery started by 3 students. 
+We stand for the value of new connections. 
+Our beer is not just a beer, it’s also a community.</p>
+        <p class="card-text"><small class="text-muted">Scroll further to find out more about Hayy</small></p>
+      </div> 
+    </div>
+  </div>
+</div>
+		  </div>
 		
 		<div class="spacer-2"></div>	
 
