--- a/marketing.html
+++ b/marketing.html
@@ -51,6 +51,42 @@
   </div>
 </nav>
 	
+	<header class="py-2 py-md-4 py-lg-5 text-center container-fluid bg-gradient text-light">
+      <h1 class="fw-light pt-5">MARKETING</h1>
+    </header>
+
+    <main class="container py-4">
+      <h2>Marketing</h2>
+      <h4 class="mt-4">Context of campaign and promotional activities</h4>
+      <p>Explain the context of the campaign is (What the campaign is about, what the message is, which promotional activities were executed). In addition, present the objectives as mentioned in the Communication & Media Plan.</p>
+      <p>Explain and justify the chosen channels/platforms used and show there is a solid connection to the objectives established in the Communication & Media Plan.</p>
+      <h4 class="mt-4">Learning Points</h4>
+      <p>Identify and justify your learning point (based on the Communication & Media Plan). What did you learn during the duration of the project concerning the campaign? What worked and what didn’t? What went as expected and what didn’t? What would you do differently? Reflect on the past work and describe what you learned.</p>
+      <h4 class="mt-4">Future Planning</h4>
+      <p>Reflection on what has been done and describe in detail what you would do if the project would continue.</p>
+      <p>Describe in detail your future recommendations if the campaign would be continued.</p>
+      <p>Detail and describe clearly the process of what your would do differently based on you experience on this project related to the marketing assignment.</p>
+      <h4 class="mt-4">Professionalism</h4>
+      <p>Present and organize below all social media/online activities of the campaign. Context and material are according to the brand style, image, and vision. Images on the site are of high-quality, readable, and properly designed.</p>
+      <ul class="list-unstyled d-flex flex-wrap justify-content-center align-items-center">
+        <li class="m-2">
+          <a href="#"><!-- Please make a link to your socials instead -->
+            <img alt="Image Placeholder" class="img-thumbnail" src="images/social-media-placeholder.jpg">
+          </a>
+        </li>
+        <li class="m-2">
+          <a href="#"><!-- Please make a link to your socials instead -->
+            <img alt="Image Placeholder" class="img-thumbnail" src="images/social-media-placeholder.jpg">
+          </a>
+        </li>
+        <li class="m-2">
+          <a href="#"><!-- Please make a link to your socials instead -->
+            <img alt="Image Placeholder" class="img-thumbnail" src="images/social-media-placeholder.jpg">
+          </a>
+        </li>
+      </ul>
+    </main>
+	
 	<div class="card-2">
 		  <div class="container-fluid">
   <div class="card-body">
