contact map and block next to drink map

--- a/drink.html
+++ b/drink.html
@@ -61,8 +61,11 @@
 			</div>
 		
 		<div class="col p-5" id="locations">
-			
-			
+			<h1>WHERE CAN YOU FIND OUR PRODUCTS</h1>
+			<ul>
+				<li>DOK 19, BREDA</li>
+				<li>BIERGARTEN, ROTTERDAM</li>
+			</ul>
 		</div>
 		<div class="col-1"></div>
 		<div class="row"></div>
