--- a/contact.html
+++ b/contact.html
@@ -52,6 +52,22 @@
 		
 		<div class="spacer-6"></div>
 		
+		 <div class="container">
+	  <div class="row px-4">
+		  <div class="col ps-5 pt-4" id="contact">
+		  <h1>HAYY!</h1>
+			  <ul>
+				  <li>Adress: Monseigneur Hopmansstraat 2, 4817 JS Breda</li>
+				  <li><a href="mailto:sebastianvdwater@gmail.com">Email: Hayythebrand@gmail.com</a></li>
+				  <li><a href="tel:06-46801576">Tel: 06-46801576</a></li>
+				  </ul>
+		  </div>
+		   <div class="col"><div class="mapouter"><div class="gmap_canvas"><iframe width="750" height="200" id="gmap_canvas" src="https://maps.google.com/maps?q=breda%20nhtv&t=&z=9&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://123movies-to.org"></a><br><style>.mapouter{position:relative;text-align:right;height:200px;width:750px;}</style><a href="https://www.embedgooglemap.net">html embed google map</a><style>.gmap_canvas {overflow:hidden;background:none!important;height:200px;width:750px;}</style></div></div></div>
+	    </div>
+	  </div>
+	  
+	  <div class="spacer-6"></div>
+		
 			  <h1 align="center">THE TEAM</h1>
 	  <div class="container"><div class="card-group">
   <div class="card">
