--- a/beers.html
+++ b/beers.html
@@ -51,6 +51,81 @@
   </div>
 </nav>
 	
+	<div class="spacer-beer"></div>
+
+	<div class="container">	
+<div class="row" id="beer-info">
+	<div class="col text-center"><div class="col"><div id="carouselExampleControls-1" class="carousel slide" data-bs-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="images/ipa-info.png" class="d-block w-100" alt="slide-1">
+    </div>
+    <div class="carousel-item">
+      <img src="images/ipa-info.png" class="d-block w-100" alt="slide-2">
+    </div>
+  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls-1" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls-1" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+</div>
+	</div>
+	</div>
+	<div class="col-1"></div>
+	
+	<div class="col text-center"><div class="col"><div id="carouselExampleControls-2" class="carousel slide" data-bs-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="images/original-info.png" class="d-block w-100" alt="slide-1">
+    </div>
+    <div class="carousel-item">
+      <img src="images/original-info.png" class="d-block w-100" alt="slide-2">
+    </div>
+  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls-2" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls-2" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+</div>
+	</div>
+	</div>
+	
+	<div class="col-1"></div>
+	
+	<div class="col text-center"><div class="col"><div id="carouselExampleControls-3" class="carousel slide" data-bs-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="images/tripel-info.png" class="d-block w-100" alt="slide-1">
+    </div>
+    <div class="carousel-item">
+      <img src="images/tripel-info.png" class="d-block w-100" alt="slide-2">
+    </div>
+  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls-3" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls-3" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+</div>
+	</div>
+	</div>
+	
+</div>
+	  </div>
+	  
+	  <div class="spacer-beer"></div>
+	
 	<div class="card-2">
 		  <div class="container-fluid">
   <div class="card-body">
