--- a/index.html
+++ b/index.html
@@ -63,7 +63,29 @@
 <div class="card">
   <div class="row g-0">
     <div class="col-md-4">
-      
+      <div class="col p-3 text-center"><div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="images/image-example.png" class="d-block w-100" alt="slide-1">
+    </div>
+    <div class="carousel-item">
+      <img src="images/image-example.png" class="d-block w-100" alt="slide-2">
+    </div>
+    <div class="carousel-item">
+      <img src="images/image-example.png" class="d-block w-100" alt="slide-3">
+    </div>
+  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+</div>
+	</div>
+    </div>
     <div class="col-md-8">
       <div class="card-body pt-5">
         <h1 class="card-title" style="font-size:4vw">Hayy You !</h1>
@@ -113,6 +135,7 @@ Follow our Instagram to know more about this event! </p>
 			  <div class="col" align="right"><h1>Mission</h1><p style="font-size: 1.4vw">In a world of social awkwardness (due to the pandemic, the shift to a digital world) we believe that the social barrier should be broken because only then, people can make real connections again. </p></div>
 		  </div>
 	  </div>
+		</div>
 		
 		<div class="spacer-3"></div>
 	  
@@ -137,5 +160,6 @@ Follow our Instagram to know more about this event! </p>
 </div>
 			  </div>
 	  </div>
+		
 </body>
 </html>
