--- a/index.html
+++ b/index.html
@@ -135,7 +135,37 @@ Follow our Instagram to know more about this event! </p>
 			  <div class="col" align="right"><h1>Mission</h1><p style="font-size: 1.4vw">In a world of social awkwardness (due to the pandemic, the shift to a digital world) we believe that the social barrier should be broken because only then, people can make real connections again. </p></div>
 		  </div>
 	  </div>
+
+		<div class="spacer-3"></div>
+	  
+
+	<div class="container">
+		<div class="row"><div class="col"><h1>PRODUCTS</h1></div></div>
+		<div class="row"><div class="col"><p style="font-size: 2vw">Your next favorite beer you didn't know you needed</p></div></div>
+<div class="row">
+	<div class="col text-center"><a href="beers.html"><img src="images/ipa-web.png" alt="beers" class="img-fluid"></a></div>
+	<div class="col text-center"><a href="beers.html"><img src="images/original-web.png" alt="beers" class="img-fluid"></a></div>
+	<div class="col text-center"><a href="beers.html"><img src="images/tripel-web.png" alt="beers" class="img-fluid"></a></div>
+	</div>
+		<div class="beer-description">
+			<div class="row">
+		<div class="col pt-4"><h6>IPA</h6></div>
+		<div class="col pt-4"><h6>ORIGINAL</h6></div>
+		<div class="col pt-4"><h6>TRIPEL</h6></div>
+			</div>
+		<div class="row">
+		<div class="col pb"><h2>IPHAYY</h2></div>
+		<div class="col"><h2>THE CLASSIC</h2></div>
+		<div class="col"><h2>HAYY HAYY HAYY</h2></div>
 		</div>
+		<div class="row">
+		<div class="col-4"><h4>7,0 %</h4></div>
+			<div class="col-4"><h4>4,5 %</h4></div>
+		<div class="col-4"><h4>8,2 %</h4></div>
+		</div>
+			</div>
+</div>
+
 		
 		<div class="spacer-3"></div>
 	  
