--- a/beers.html
+++ b/beers.html
@@ -61,7 +61,7 @@
       <img src="images/ipa-info.png" class="d-block w-100" alt="slide-1">
     </div>
     <div class="carousel-item">
-      <img src="images/ipa-info.png" class="d-block w-100" alt="slide-2">
+      <img src="images/300ppi/ipa-info.png" class="d-block w-100" alt="slide-2">
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls-1" data-bs-slide="prev">
@@ -83,7 +83,7 @@
       <img src="images/original-info.png" class="d-block w-100" alt="slide-1">
     </div>
     <div class="carousel-item">
-      <img src="images/original-info.png" class="d-block w-100" alt="slide-2">
+      <img src="images/300ppi/classic-info.png" class="d-block w-100" alt="slide-2">
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls-2" data-bs-slide="prev">
@@ -106,7 +106,7 @@
       <img src="images/tripel-info.png" class="d-block w-100" alt="slide-1">
     </div>
     <div class="carousel-item">
-      <img src="images/tripel-info.png" class="d-block w-100" alt="slide-2">
+      <img src="images/300ppi/tripel-info.png" class="d-block w-100" alt="slide-2">
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls-3" data-bs-slide="prev">
