--- a/contact.html
+++ b/contact.html
@@ -68,38 +68,29 @@
 	  
 	  <div class="spacer-6"></div>
 		
-			  <h1 align="center">THE TEAM</h1>
+			  <h1 align="center" class="pb-3">THE TEAM</h1>
 	  <div class="container"><div class="card-group">
   <div class="card">
-    <img src="images/image-example.png" class="card-img-top" alt="...">
+    <img src="images/image-example.png" class="card-img-top" alt="fien-kommer">
     <div class="card-body">
       <h5 class="card-title">Fien Kommer&nbsp;</h5>
       <p class="card-text">info&nbsp;</p>
     </div>
-    <div class="card-footer">
-      <small class="text-muted">Last updated 3 mins ago</small>
-    </div>
   </div>
 		  <div class="col-1"></div>
   <div class="card">
-    <img src="images/image-example.png" class="card-img-top" alt="...">
+    <img src="images/image-example.png" class="card-img-top" alt="charlotte-mommer">
     <div class="card-body">
       <h5 class="card-title">Charlotte Mommer&nbsp;</h5>
       <p class="card-text">info&nbsp;</p>
     </div>
-    <div class="card-footer">
-      <small class="text-muted">Last updated 3 mins ago</small>
-    </div>
   </div>
 		  <div class="col-1"></div>
   <div class="card">
-    <img src="images/image-example.png" class="card-img-top" alt="...">
+    <img src="images/image-example.png" class="card-img-top" alt="sebastian-van-de-water">
     <div class="card-body">
       <h5 class="card-title">Sebatian van de Water&nbsp;</h5>
       <p class="card-text">Knapste van de groep</p>
-    </div>
-    <div class="card-footer">
-      <small class="text-muted">Last updated 3 mins ago</small>
     </div>
   </div>
 </div></div>
