--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@ Follow our Instagram to know more about this event! </p>
 
 		<div class="spacer-3"></div>
 	  
-
+<section class="beers">
 	<div class="container">
 		<div class="row"><div class="col"><h1>PRODUCTS</h1></div></div>
 		<div class="row"><div class="col"><p style="font-size: 2vw">Your next favorite beer you didn't know you needed</p></div></div>
@@ -165,6 +165,7 @@ Follow our Instagram to know more about this event! </p>
 		</div>
 			</div>
 </div>
+	</section>
 
 		
 		<div class="spacer-3"></div>
@@ -175,10 +176,12 @@ Follow our Instagram to know more about this event! </p>
   <div class="card-body">
 	  <div class="row">
     <div class="col pb-2 text-center">
+		<div class="footer-links"></div>
       <a href="index.html">HOME</a>
 	  <a href="beers.html">BEERS</a>
 		<a href="drink.html">WHERE TO DRINK US</a>
 		<a href="contact.html">CONTACT</a>
+		</div>
     </div>
 	  <hr>
 	  <div class="row">
@@ -189,7 +192,7 @@ Follow our Instagram to know more about this event! </p>
   </div>
 </div>
 			  </div>
-	  </div>
+	 
 		
 </body>
 </html>
