--- a/marketing.html
+++ b/marketing.html
@@ -101,7 +101,7 @@
 	  <div class="row">
     <div class="col pt-4">© 2022 Hayy, Inc</div>
 	<div class="col pt-2 text-center"><img src="images/hayylogo.png" class="img-fluid" alt="logo footer" height="100" width="50"></div>
-	<div class="col pt-4" align="right">instagram icon</div>
+	<div class="col pt-4" align="right"><a href="https://www.instagram.com/hayythebrand/"><img src="images/instagram-icon-yellow.png" height="30" alt="instagram-icon"></a></div>
 		  </div>
   </div>
 </div>
