products, home page

--- a/index.html
+++ b/index.html
@@ -169,7 +169,19 @@ Follow our Instagram to know more about this event! </p>
 		
 		<div class="spacer-3"></div>
 		
-		
+		<section class="drink text-center">
+	<div class="container">
+<div class="row"></div>
+	<div class="col"><a href="drink.html"><div class="card text-white">
+  <img src="images/original.png" class="card-img" alt="banner-drink-us" id="banner">
+  <div class="card-img-overlay">
+    <h5 class="card-title">Where to drink Hayy?</h5>
+    <p class="card-text">Come and enjoy Hayy by one of our many partners and come to together and be part of the Hayy community!</p>
+    
+  </div>
+</div></a></div>
+		</div>
+	  </section>
 
 		
 		<div class="spacer-3"></div>
