--- a/contact.html
+++ b/contact.html
@@ -71,7 +71,7 @@
 			  <h1 align="center" class="pb-3">THE TEAM</h1>
 	  <div class="container"><div class="card-group">
   <div class="card">
-    <img src="images/image-example.png" class="card-img-top" alt="fien-kommer">
+    <img src="images/fienkommer.png" class="card-img-top p-2" alt="fien-kommer">
     <div class="card-body">
       <h5 class="card-title">Fien Kommer&nbsp;</h5>
       <p class="card-text">info&nbsp;</p>
@@ -79,7 +79,7 @@
   </div>
 		  <div class="col-1"></div>
   <div class="card">
-    <img src="images/image-example.png" class="card-img-top" alt="charlotte-mommer">
+    <img src="images/charlottemommer.png" class="card-img-top p-2" alt="charlotte-mommer">
     <div class="card-body">
       <h5 class="card-title">Charlotte Mommer&nbsp;</h5>
       <p class="card-text">info&nbsp;</p>
@@ -87,7 +87,7 @@
   </div>
 		  <div class="col-1"></div>
   <div class="card">
-    <img src="images/image-example.png" class="card-img-top" alt="sebastian-van-de-water">
+    <img src="images/sebastianvandewater.png" class="card-img-top p-2" alt="sebastian-van-de-water">
     <div class="card-body">
       <h5 class="card-title">Sebatian van de Water&nbsp;</h5>
       <p class="card-text">Knapste van de groep</p>
