--- a/contact.html
+++ b/contact.html
@@ -74,7 +74,7 @@
     <img src="images/fienkommer.png" class="card-img-top p-2" alt="fien-kommer">
     <div class="card-body">
       <h5 class="card-title">Fien Kommer&nbsp;</h5>
-      <p class="card-text">info&nbsp;</p>
+      <p class="card-text">Design&nbsp;</p>
     </div>
   </div>
 		  <div class="col-1"></div>
@@ -82,7 +82,7 @@
     <img src="images/charlottemommer.png" class="card-img-top p-2" alt="charlotte-mommer">
     <div class="card-body">
       <h5 class="card-title">Charlotte Mommer&nbsp;</h5>
-      <p class="card-text">info&nbsp;</p>
+      <p class="card-text">Marketing&nbsp;</p>
     </div>
   </div>
 		  <div class="col-1"></div>
