--- a/index.html
+++ b/index.html
@@ -66,13 +66,13 @@
       <div class="col p-3 text-center"><div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="images/image-example.png" class="d-block w-100" alt="slide-1">
+      <img src="images/women-drinking-together.png" class="d-block w-100" alt="slide-1">
     </div>
     <div class="carousel-item">
-      <img src="images/image-example.png" class="d-block w-100" alt="slide-2">
+      <img src="images/beer-tap.png" class="d-block w-100" alt="slide-2">
     </div>
     <div class="carousel-item">
-      <img src="images/image-example.png" class="d-block w-100" alt="slide-3">
+      <img src="images/beers.png" class="d-block w-100" alt="slide-3">
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
@@ -173,10 +173,10 @@ Follow our Instagram to know more about this event! </p>
 	<div class="container">
 <div class="row"></div>
 	<div class="col"><a href="drink.html"><div class="card text-white">
-  <img src="images/original.png" class="card-img" alt="banner-drink-us" id="banner">
+  <img src="images/two-beers.png" class="card-img" alt="banner-drink-us" id="banner">
   <div class="card-img-overlay">
-    <h5 class="card-title">Where to drink Hayy?</h5>
-    <p class="card-text">Come and enjoy Hayy by one of our many partners and come to together and be part of the Hayy community!</p>
+    <h5 class="card-title" style="font-size: 2vw">Where to drink Hayy?</h5>
+    <p class="card-text" style="font-size: 1.5vw">Come and enjoy Hayy by one of our many partners and come to together and be part of the Hayy community!</p>
     
   </div>
 </div></a></div>
