--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 			  <div class="spacer-1"></div>
 	  
 	  <div class="container">
-<div class="card">
+<div class="card" id="hayy-opening-banner">
   <div class="row g-0">
     <div class="col-md-4">
       <div class="col p-3 text-center"><div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
@@ -89,7 +89,7 @@
     <div class="col-md-8">
       <div class="card-body pt-5">
         <h1 class="card-title" style="font-size:4vw">Hayy You !</h1>
-        <p class="card-text" style="font-size:2vw">Glad to see you here, are you ready to socialize with hayy beer? 
+        <p class="card-text" style="font-size:2vw">Glad to see you here, are you ready to socialize with Hayy beer? 
 We are a Breda based brewery started by 3 students. 
 We stand for the value of new connections. 
 Our beer is not just a beer, it’s also a community.</p>
