--- a/contact.html
+++ b/contact.html
@@ -74,7 +74,7 @@
     <img src="images/fienkommer.png" class="card-img-top p-2" alt="fien-kommer">
     <div class="card-body">
       <h5 class="card-title">Fien Kommer&nbsp;</h5>
-      <p class="card-text">Design&nbsp;</p>
+      <p class="card-text">CEO</p>
     </div>
   </div>
 		  <div class="col-1"></div>
@@ -90,7 +90,7 @@
     <img src="images/sebastianvandewater.png" class="card-img-top p-2" alt="sebastian-van-de-water">
     <div class="card-body">
       <h5 class="card-title">Sebatian van de Water&nbsp;</h5>
-      <p class="card-text">Knapste van de groep</p>
+      <p class="card-text">Design&nbsp;</p>
     </div>
   </div>
 </div></div>
