--- a/drink.html
+++ b/drink.html
@@ -57,15 +57,19 @@
 	<div class="row">
 		<div class="col-1"></div>
 		<div class="col">
-	<iframe src="https://www.google.com/maps/d/u/0/embed?mid=1Co3k7peIWioyP9FkzeWst7we7akIt8d-&ehbc=2E312F" width="700" height="600"></iframe>
+	<iframe src="https://www.google.com/maps/d/u/0/embed?mid=1Qy5K1MUXvPkaINmCfBygm1-Vxq7hA1Jk&ehbc=2E312F" width="700" height="600"></iframe>
 			</div>
 		
 		<div class="col p-5" id="locations">
-			<h1>WHERE CAN YOU FIND OUR PRODUCTS</h1>
+		  <h1>WHERE CAN YOU FIND OUR PRODUCTS</h1>
+			<div class="list-locations" style="font-size:1.6vw">
 			<ul>
-				<li>DOK 19, BREDA</li>
+				<li >DOK 19, BREDA</li>
 				<li>BIERGARTEN, ROTTERDAM</li>
+				<li>CAFÉ DE STAD, UTRECHT</li>
+				<li>NOORDERLICHT, AMSTERDAM</li>
 			</ul>
+				</div>
 		</div>
 		<div class="col-1"></div>
 		<div class="row"></div>
