--- a/index.html
+++ b/index.html
@@ -93,7 +93,6 @@
 We are a Breda based brewery started by 3 students. 
 We stand for the value of new connections. 
 Our beer is not just a beer, it’s also a community.</p>
-        <p class="card-text"><small class="text-muted">Scroll further to find out more about Hayy</small></p>
       </div> 
     </div>
   </div>
@@ -127,12 +126,15 @@ Follow our Instagram to know more about this event! </p>
 	  
 		<div class="container">
 	  <div class="row">
+		  <div class="col-1"></div>
 		  <div class="col-7 pb-5"><h1>Vision</h1><p style="font-size: 1.4vw">In a world of social awkwardness (due to the pandemic, the shift to a digital world) we believe that the social barrier should be broken because only then, people can make real connections again. </p></div>
 		  </div>
 		  
 		  <div class="row pt-5">
 			  <div class="col-5"></div>
-			  <div class="col" align="right"><h1>Mission</h1><p style="font-size: 1.4vw">In a world of social awkwardness (due to the pandemic, the shift to a digital world) we believe that the social barrier should be broken because only then, people can make real connections again. </p></div>
+			  <div class="col" align="right"><h1>Values</h1><p style="font-size: 1.4vw">Open-mindedness, Connection, Self-esteem and Trust </p>
+			  </div>
+			  <div class="col-1"></div>
 		  </div>
 	  </div>
 
