--- a/marketing.html
+++ b/marketing.html
@@ -68,23 +68,13 @@
       <p>Detail and describe clearly the process of what your would do differently based on you experience on this project related to the marketing assignment.</p>
       <h4 class="mt-4">Professionalism</h4>
       <p>Present and organize below all social media/online activities of the campaign. Context and material are according to the brand style, image, and vision. Images on the site are of high-quality, readable, and properly designed.</p>
-      <ul class="list-unstyled d-flex flex-wrap justify-content-center align-items-center">
-        <li class="m-2">
-          <a href="#"><!-- Please make a link to your socials instead -->
-            <img alt="Image Placeholder" class="img-thumbnail" src="images/social-media-placeholder.jpg">
-          </a>
-        </li>
-        <li class="m-2">
-          <a href="#"><!-- Please make a link to your socials instead -->
-            <img alt="Image Placeholder" class="img-thumbnail" src="images/social-media-placeholder.jpg">
-          </a>
-        </li>
-        <li class="m-2">
-          <a href="#"><!-- Please make a link to your socials instead -->
-            <img alt="Image Placeholder" class="img-thumbnail" src="images/social-media-placeholder.jpg">
-          </a>
-        </li>
-      </ul>
+      
+		<div class="row">
+	<div class="col text-center"><a href="https://www.instagram.com/hayythebrand/"><img src="images/post-2.png" alt="beers" class="img-fluid"></a></div>
+	<div class="col text-center"><a href="https://www.instagram.com/hayythebrand/"><img src="images/post-1.png" alt="beers" class="img-fluid"></a></div>
+	<div class="col text-center"><a href="https://www.instagram.com/hayythebrand/"><img src="images/post-3.png" alt="beers" class="img-fluid"></a></div>
+	<div class="col text-center"><a href="https://www.instagram.com/hayythebrand/"><img src="images/post-4.png" alt="beers" class="img-fluid"></a></div>
+	</div>
     </main>
 	
 	<div class="card-2">
