--- a/index.html
+++ b/index.html
@@ -127,10 +127,10 @@ Follow our Instagram to know more about this event! </p>
 		<div class="container">
 	  <div class="row">
 		  <div class="col-1"></div>
-		  <div class="col-7 pb-5"><h1>Vision</h1><p style="font-size: 1.4vw">In a world of social awkwardness (due to the pandemic, the shift to a digital world) we believe that the social barrier should be broken because only then, people can make real connections again. </p></div>
+		  <div class="col-7"><h1>Vision</h1><p style="font-size: 1.4vw">In a world of social awkwardness, we believe that the social barrier should be broken because only then, people can make real connections again. We want to give people the feeling of confidence to step up to new people and start the conversation to eventually make new connections.</p></div>
 		  </div>
 		  
-		  <div class="row pt-5">
+		  <div class="row">
 			  <div class="col-5"></div>
 			  <div class="col" align="right"><h1>Values</h1><p style="font-size: 1.4vw">Open-mindedness, Connection, Self-esteem and Trust </p>
 			  </div>
