--- a/marketing.html
+++ b/marketing.html
@@ -27,7 +27,7 @@
       <img src="images/hayylogo.png" alt="" width="40" height="40">
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
+      <span class="navbar-toggler-icon">MENU</span>
     </button>
     <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
       <ul class="navbar-nav">
@@ -57,25 +57,53 @@
 
     <main class="container py-4">
       <h2>Marketing</h2>
+		
+		<hr>
+		
       <h4 class="mt-4">Context of campaign and promotional activities</h4>
-      <p>Explain the context of the campaign is (What the campaign is about, what the message is, which promotional activities were executed). In addition, present the objectives as mentioned in the Communication & Media Plan.</p>
-      <p>Explain and justify the chosen channels/platforms used and show there is a solid connection to the objectives established in the Communication & Media Plan.</p>
+		<p>Hayy’s has conducted 4 instagram campaigns</p>
+
+<h6>The Dare campaign</h6>
+<p>The campaign is about inspiring people to dare. Hayy challenges the audience to step up to new people, start the conversation. This campaign is reinforced with the #getsocial and #starttheconversation</p>
+
+<h6>The Hayy beers introduction campaign</h6>
+<p>In this campaign we introduced our 3 types of craft beer to our followers. Presenting first the Hayy original beer. Then we introduced the IpHayy (IPA) and last but not least, the Hayy Hayy Hayy (Tripel) beer. With these 3 posts our audience discovered the Hayy bottle designs.</p>
+
+<h6>The response campaign</h6>
+<p>This campaign was hold in Hayy’s Instagram stories. Thanks to this campaign we were able to measure the response from our audience regarding our brand message. The followers had to respond to 3 polls. 
+	<br>
+1. Did you meet a new person this week? 83% YES/ 17% NO from the 12 votes<br>
+2. Did you start the conversation? 55% YES/ 45% NO from the 11 votes<br>
+3. How confident are you to start a conversation with a stranger? (Gradation answer tool on insta stories) The average felt pretty confident to start a conversation with a stranger.</p>
+
+<h6>The become part of the community campaign</h6>
+<p>Hayy is part of the special beer night event in Breda. Hayy promoted this event on the Instagram and inspired the followers to join the event and become part of the Hayy family.</p>
+		
+		<hr>
       <h4 class="mt-4">Learning Points</h4>
-      <p>Identify and justify your learning point (based on the Communication & Media Plan). What did you learn during the duration of the project concerning the campaign? What worked and what didn’t? What went as expected and what didn’t? What would you do differently? Reflect on the past work and describe what you learned.</p>
+      <p>During the project we could have organised our media campaigns in a more stuctured way. We started posting halfway of the project because we weren’t done with the final logo yet. If we would have been earlier done with the final brand colors/finished logo, the response on our campaigns could have been beter. We learned that our brand message was hard to measure because it is about people daring to be social with new people. We can only rely on honest answers from our followers on polls. But we can't measure if our target audience acted upon our brand message. We also learned that we could have done more regarding gaining more followers that are not other Brand Development accounts or second year Creative Business students.
+		  <br>
+		  On the other hand we were suprised by the many positive responses from our followers on our branding, people liked the designs and inside jokes from our beer bottles. People also liked the campaigns, they found them interactive and genuine.
+	</p>
+	
+		<hr>
+		
       <h4 class="mt-4">Future Planning</h4>
-      <p>Reflection on what has been done and describe in detail what you would do if the project would continue.</p>
-      <p>Describe in detail your future recommendations if the campaign would be continued.</p>
-      <p>Detail and describe clearly the process of what your would do differently based on you experience on this project related to the marketing assignment.</p>
+      <p>Regarding the planning of our social media posts we believe we could have been more organized and plan better ahead instead of gowing with the flow. If the project would continue we would definetly do more research for new campaigns and make a clearer content planning.</p>
+      <p>Future recommandations would be that we would love to elaborate our dare campaign to inspire people with our brand message, we would enjoy doing more campaigns linked to events where Hayy beer would be available because we think that our social media should be only a place where we inform our target audience about our brand, but also a place where we motivate them to gather and be social in real life.</p>
+     
+		<hr>
+		
       <h4 class="mt-4">Professionalism</h4>
       <p>Present and organize below all social media/online activities of the campaign. Context and material are according to the brand style, image, and vision. Images on the site are of high-quality, readable, and properly designed.</p>
       
 		<div class="row">
-	<div class="col text-center"><a href="https://www.instagram.com/hayythebrand/"><img src="images/post-2.png" alt="beers" class="img-fluid"></a></div>
-	<div class="col text-center"><a href="https://www.instagram.com/hayythebrand/"><img src="images/post-1.png" alt="beers" class="img-fluid"></a></div>
-	<div class="col text-center"><a href="https://www.instagram.com/hayythebrand/"><img src="images/post-3.png" alt="beers" class="img-fluid"></a></div>
-	<div class="col text-center"><a href="https://www.instagram.com/hayythebrand/"><img src="images/post-4.png" alt="beers" class="img-fluid"></a></div>
+	<div class="col text-center"><a href="https://www.instagram.com/hayythebrand/"><img src="images/instagram-1.png" alt="beers" class="img-fluid"></a></div>
+	<div class="col text-center"><a href="https://www.instagram.com/hayythebrand/"><img src="images/instagram-2.png" alt="beers" class="img-fluid"></a></div>
 	</div>
     </main>
+	
+	<hr>
 	
 	<div class="card-2">
 		  <div class="container-fluid">
