--- a/marketing.html
+++ b/marketing.html
@@ -96,14 +96,23 @@
 		
       <h4 class="mt-4">Professionalism</h4>
       <p>Present and organize below all social media/online activities of the campaign. Context and material are according to the brand style, image, and vision. Images on the site are of high-quality, readable, and properly designed.</p>
+		
+		<hr>
       
 		<div class="row">
 	<div class="col text-center"><a href="https://www.instagram.com/hayythebrand/"><img src="images/instagram-1.png" alt="beers" class="img-fluid"></a></div>
 	<div class="col text-center"><a href="https://www.instagram.com/hayythebrand/"><img src="images/instagram-2.png" alt="beers" class="img-fluid"></a></div>
 	</div>
+		
+		<br>
+		
+		<div class="row">
+	<div class="col text-center"><a href="https://www.instagram.com/hayythebrand/"><img src="images/new-person.PNG" alt="beers" class="img-fluid"></a></div>
+	<div class="col text-center"><a href="https://www.instagram.com/hayythebrand/"><img src="images/start-conversation.PNG" alt="beers" class="img-fluid"></a></div>
+	<div class="col text-center"><a href="https://www.instagram.com/hayythebrand/"><img src="images/analysis.PNG" alt="beers" class="img-fluid"></a></div>
+	</div>
     </main>
 	
-	<hr>
 	
 	<div class="card-2">
 		  <div class="container-fluid">
