--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ Our beer is not just a beer, it’s also a community.</p>
     <p style="font-size: 1.5vw" class="card-text">Every first Monday of the month enjoy our beers during the pub crawl through Breda. 
 As we are a Breda based company we want to show you how fun the city is at nighttime! 
 Follow our Instagram to know more about this event! </p>
-    <a href="https://www.instagram.com/hayythebrand/" class="card-link"><button type="button" class="btn-sm" style="font-size:1.4vw">Instagram</button></a>
+    <button type="button" class="btn-sm" style="font-size:1.4vw"><a href="https://www.instagram.com/hayythebrand/" class="card-link">Instagram</a></button>
     
 	  </div>
   </div>
@@ -132,7 +132,7 @@ Follow our Instagram to know more about this event! </p>
 		  
 		  <div class="row">
 			  <div class="col-5"></div>
-			  <div class="col" align="right"><h1>Values</h1><p style="font-size: 1.4vw">Open-mindedness, Connection, Self-esteem and Trust </p>
+			  <div class="col" id="align-right-values"><h1>Values</h1><p style="font-size: 1.4vw">Open-mindedness, Connection, Self-esteem and Trust </p>
 			  </div>
 			  <div class="col-1"></div>
 		  </div>
@@ -142,7 +142,7 @@ Follow our Instagram to know more about this event! </p>
 	  
 <section class="beers">
 	<div class="container">
-		<div class="row"><div class="col"><h1>PRODUCTS</h1></div></div>
+		<h1>PRODUCTS</h1>
 		<div class="row"><div class="col"><p style="font-size: 2vw">Your next favorite beer you didn't know you needed</p></div></div>
 <div class="row">
 	<div class="col text-center"><a href="beers.html"><img src="images/ipa-web.png" alt="beers" class="img-fluid"></a></div>
@@ -205,7 +205,7 @@ Follow our Instagram to know more about this event! </p>
 	  <div class="row">
     <div class="col pt-4">© 2022 Hayy, Inc</div>
 	<div class="col pt-2 text-center"><img src="images/hayylogo.png" class="img-fluid" alt="logo footer" height="100" width="50"></div>
-	<div class="col pt-4" align="right"><a href="https://www.instagram.com/hayythebrand/"><img src="images/instagram-icon-yellow.png" height="30" alt="instagram-icon"></a></div>
+	<div class="col pt-4 instagram-icon" id="align-right-instagram"><a href="https://www.instagram.com/hayythebrand/"><img src="images/instagram-icon-yellow.png" height="30" alt="instagram-icon"></a></div>
 		  </div>
   </div>
 </div>
