--- a/contact.html
+++ b/contact.html
@@ -62,13 +62,13 @@
 				  <li><a href="tel:06-46801576">Tel: 06-46801576</a></li>
 				  </ul>
 		  </div>
-		   <div class="col"><div class="mapouter"><div class="gmap_canvas"><iframe width="750" height="200" id="gmap_canvas" src="https://maps.google.com/maps?q=breda%20nhtv&t=&z=9&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://123movies-to.org"></a><br><style>.mapouter{position:relative;text-align:right;height:200px;width:750px;}</style><a href="https://www.embedgooglemap.net">html embed google map</a><style>.gmap_canvas {overflow:hidden;background:none!important;height:200px;width:750px;}</style></div></div></div>
+		   <div class="col"><div class="mapouter"><div class="gmap_canvas"><iframe width="750" height="200" id="gmap_canvas" src="https://maps.google.com/maps?q=breda%20nhtv&t=&z=9&ie=UTF8&iwloc=&output=embed" ></iframe><a href="https://123movies-to.org"></a><br><a href="https://www.embedgooglemap.net">html embed google map</a><style>.gmap_canvas {overflow:hidden;background:none!important;height:200px;width:750px;}</style></div></div><style>.mapouter{position:relative;text-align:right;height:200px;width:750px;}</style></div>
 	    </div>
 	  </div>
 	  
 	  <div class="spacer-6"></div>
 		
-			  <h1 align="center" class="pb-3">THE TEAM</h1>
+			  <h1 class="pb-3 text-center">THE TEAM</h1>
 	  <div class="container"><div class="card-group">
   <div class="card">
     <img src="images/fienkommer.png" class="card-img-top p-2" alt="fien-kommer">
@@ -111,7 +111,7 @@
 	  <div class="row">
     <div class="col pt-4">© 2022 Hayy, Inc</div>
 	<div class="col pt-2 text-center"><img src="images/hayylogo.png" class="img-fluid" alt="logo footer" height="100" width="50"></div>
-	<div class="col pt-4" align="right"><a href="https://www.instagram.com/hayythebrand/"><img src="images/instagram-icon-yellow.png" height="30" alt="instagram-icon"></a></div>
+	<div class="col pt-4 instagram-icon"><a href="https://www.instagram.com/hayythebrand/"><img src="images/instagram-icon-yellow.png" height="30" alt="instagram-icon"></a></div>
 		  </div>
   </div>
 </div>
