--- a/drink.html
+++ b/drink.html
@@ -62,7 +62,7 @@
 		
 		<div class="col p-5" id="locations">
 		  <h1>WHERE CAN YOU FIND OUR PRODUCTS</h1>
-			<div class="list-locations" style="font-size:1.6vw">
+			<div class="list-locations">
 			<ul>
 				<li >DOK 19, BREDA</li>
 				<li>BIERGARTEN, ROTTERDAM</li>
