--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
     </div>
     <div class="col-md-8">
       <div class="card-body pt-5">
-        <h1 class="card-title" style="font-size:4vw">Hayy You !</h1>
-        <p class="card-text" style="font-size:2vw">Glad to see you here, are you ready to socialize with Hayy beer? 
+        <h1 class="card-title-opening">Hayy You !</h1>
+        <p class="card-text-opening">Glad to see you here, are you ready to socialize with Hayy beer? 
 We are a Breda based brewery started by 3 students. 
 We stand for the value of new connections. 
 Our beer is not just a beer, it’s also a community.</p>
@@ -108,7 +108,7 @@ Our beer is not just a beer, it’s also a community.</p>
 	<div class="card-1" style="width: 60rem;">
   <div class="card-body text-center">
     <h3 class="card-title">“Become part of the Hayy community” </h3>
-    <p style="font-size: 1.5vw" class="card-text">Every first Monday of the month enjoy our beers during the pub crawl through Breda. 
+    <p class="card-text-instagram">Every first Monday of the month enjoy our beers during the pub crawl through Breda. 
 As we are a Breda based company we want to show you how fun the city is at nighttime! 
 Follow our Instagram to know more about this event! </p>
     <button type="button" class="btn-sm" style="font-size:1.4vw"><a href="https://www.instagram.com/hayythebrand/" class="card-link">Instagram</a></button>
@@ -127,12 +127,12 @@ Follow our Instagram to know more about this event! </p>
 		<div class="container">
 	  <div class="row">
 		  <div class="col-1"></div>
-		  <div class="col-7"><h1>Vision</h1><p style="font-size: 1.4vw">In a world of social awkwardness, we believe that the social barrier should be broken because only then, people can make real connections again. We want to give people the feeling of confidence to step up to new people and start the conversation to eventually make new connections.</p></div>
+		  <div class="col-7"><h1>Vision</h1><p class="vision-values">In a world of social awkwardness, we believe that the social barrier should be broken because only then, people can make real connections again. We want to give people the feeling of confidence to step up to new people and start the conversation to eventually make new connections.</p></div>
 		  </div>
 		  
 		  <div class="row">
 			  <div class="col-5"></div>
-			  <div class="col" id="align-right-values"><h1>Values</h1><p style="font-size: 1.4vw">Open-mindedness, Connection, Self-esteem and Trust </p>
+			  <div class="col" id="align-right-values"><h1>Values</h1><p class="vision-values">Open-mindedness, Connection, Self-esteem and Trust </p>
 			  </div>
 			  <div class="col-1"></div>
 		  </div>
@@ -177,8 +177,8 @@ Follow our Instagram to know more about this event! </p>
 	<div class="col"><a href="drink.html"><div class="card text-white">
   <img src="images/two-beers.png" class="card-img" alt="banner-drink-us" id="banner">
   <div class="card-img-overlay">
-    <h5 class="card-title" style="font-size: 2vw">Where to drink Hayy?</h5>
-    <p class="card-text" style="font-size: 1.5vw">Come and enjoy Hayy by one of our many partners and come to together and be part of the Hayy community!</p>
+    <h5 class="card-title-drink">Where to drink Hayy?</h5>
+    <p class="card-text-drink">Come and enjoy Hayy by one of our many partners and come to together and be part of the Hayy community!</p>
     
   </div>
 </div></a></div>
